refactor common modules, dynamic diet goals, and admin diet management APIs